--- a/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
+++ b/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
@@ -468,7 +468,7 @@
                 <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/mBarChart"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_150sdp"
+                    android:layout_height="@dimen/_172sdp"
                     android:layout_marginTop="@dimen/default_space"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -479,6 +479,7 @@
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/clPerformance"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/default_space"
@@ -534,12 +535,12 @@
             </android.support.constraint.ConstraintLayout>
 
             <TextView
+                android:id="@+id/tvFundDetails"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
                 android:text="@string/to_know_more_about_reliance_liquid_fund_click_here"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                app:hasLink="@{true}" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
             <Button
                 android:id="@+id/btnInvest"
