--- a/app/src/main/res/drawable/page_selected.xml
+++ b/app/src/main/res/drawable/page_selected.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/pdlg_color_green" />
+    <solid android:color="@color/colorAccent" />
     <size
         android:width="@dimen/space_8"
         android:height="@dimen/space_8" />
