--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -229,7 +229,7 @@
                     android:layout_marginStart="@dimen/space_8"
                     android:layout_weight="2"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/google_plus" />
+                    android:src="@drawable/ic_google" />
 
                 <View
                     android:layout_width="1dp"
@@ -243,7 +243,7 @@
                     android:layout_weight="8"
                     android:gravity="center"
                     android:maxLines="1"
-                    android:text="@string/google_plus"
+                    android:text="@string/google"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/white" />
 
