Resolved table issue of Tarrakki Zyaada.

--- a/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
+++ b/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
@@ -126,7 +126,17 @@
                 android:orientation="vertical"
                 android:padding="8dp">
 
-                <HorizontalScrollView
+
+                <include
+                    android:id="@+id/hScrollView"
+                    layout="@layout/tbl_tarrakki_zyaada"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <!--<HorizontalScrollView
                     android:id="@+id/hScrollView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -143,8 +153,7 @@
                         android:orientation="horizontal"
                         android:showDividers="middle" />
 
-
-                </HorizontalScrollView>
+                </HorizontalScrollView>-->
 
                 <TextView
                     android:id="@+id/tvSymbol1"
@@ -468,7 +477,7 @@
                 <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/mBarChart"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_172sdp"
+                    android:layout_height="@dimen/_188sdp"
                     android:layout_marginTop="@dimen/default_space"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
