--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,6 +30,7 @@
 
     <color name="bg_img_color">#D1F3F5</color>
     <color name="disclaimer_color">#4185c9</color>
+    <color name="notes_color">#4185c9</color>
 
     <string-array name="risk_level_color">
         <item>#00CB00</item>
