--- a/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
+++ b/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
@@ -202,6 +202,7 @@
                     android:layout_marginStart="8dp"
                     android:text="@string/daily_purchase_limit_of_50"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textStyle="italic"
                     app:layout_constraintBaseline_toBaselineOf="@id/tvSymbol1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/barrier"
@@ -215,6 +216,7 @@
                     android:layout_marginStart="8dp"
                     android:text="@string/upto_50_of_the_balance_or_up"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textStyle="italic"
                     app:layout_constraintBaseline_toBaselineOf="@id/tvSymbol2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/barrier"
@@ -228,6 +230,7 @@
                     android:layout_marginStart="8dp"
                     android:text="@string/upto_u20b950_000_or_90_of"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textStyle="italic"
                     app:layout_constraintBaseline_toBaselineOf="@id/tvSymbol3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/barrier"
