--- a/app/src/main/res/layout/tbl_tarrakki_zyaada.xml
+++ b/app/src/main/res/layout/tbl_tarrakki_zyaada.xml
@@ -107,12 +107,15 @@
         android:id="@+id/tvTitleA1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:minLines="2"
         android:padding="4dp"
+        android:paddingStart="@dimen/_8sdp"
+        android:paddingEnd="@dimen/_8sdp"
         android:text="@string/liquidity"
         android:textSize="@dimen/_9ssp"
         app:layout_constraintEnd_toStartOf="@id/ivA2"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintHorizontal_weight="1.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mDivider1" />
@@ -167,9 +170,11 @@
         android:id="@+id/tvTitleB1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:minLines="2"
         android:padding="4dp"
+        android:paddingStart="@dimen/_8sdp"
+        android:paddingEnd="@dimen/_8sdp"
         android:text="@string/debit_cart"
         android:textSize="@dimen/_9ssp"
         app:layout_constraintEnd_toStartOf="@id/ivB2"
@@ -227,9 +232,11 @@
         android:id="@+id/tvTitleC1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:minLines="2"
         android:padding="4dp"
+        android:paddingStart="@dimen/_8sdp"
+        android:paddingEnd="@dimen/_8sdp"
         android:text="@string/atm_withdrawal"
         android:textSize="@dimen/_9ssp"
         app:layout_constraintEnd_toStartOf="@id/ivC2"
@@ -287,9 +294,11 @@
         android:id="@+id/tvTitleD1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:minLines="2"
         android:padding="4dp"
+        android:paddingStart="@dimen/_8sdp"
+        android:paddingEnd="@dimen/_8sdp"
         android:text="@string/instant_withdrawal"
         android:textSize="@dimen/_9ssp"
         app:layout_constraintEnd_toStartOf="@id/ivD2"
@@ -346,9 +355,11 @@
         android:id="@+id/tvTitleE1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:minLines="2"
         android:padding="4dp"
+        android:paddingStart="@dimen/_8sdp"
+        android:paddingEnd="@dimen/_8sdp"
         android:text="@string/minimum_investment"
         android:textSize="@dimen/_9ssp"
         app:layout_constraintEnd_toStartOf="@id/ivD2"
